--- a/css/main.css
+++ b/css/main.css
@@ -540,6 +540,13 @@ textarea.custom-input {
   font-style: normal;
   font-display: swap;
 }
+@font-face {
+  font-family: "Myriad Pro";
+  src: url("../fonts/MyriadPro-Regular.woff") format("woff2"), url("../fonts/MyriadPro-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
 
 /* 1.3 Utils */
 .visually-hidden {
@@ -1829,9 +1836,10 @@ textarea.custom-input {
 
 .logo__text {
   display: block;
+  font-family: Myriad Pro;
   max-width: 110px;
   align-self: center;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 1.285;
   color: #000000;
   text-transform: capitalize;
@@ -1842,7 +1850,8 @@ textarea.custom-input {
 
 @media (min-width: 768px) {
   .logo__text {
-    font-size: 12px;
+    font-family: Myriad Pro;
+    font-size: 16px;
   }
 }
 
@@ -1875,6 +1884,7 @@ textarea.custom-input {
 @media (min-width: 768px) {
   .webpage--technical-drawing .logo__text {
     font-size: 12px;
+    font-family: Myriad Pro;
   }
 }
 
@@ -1896,12 +1906,13 @@ textarea.custom-input {
 
 .webpage--modern .logo__text {
   display: block;
+  font-family: Myriad Pro;
   max-width: 110px;
   align-self: center;
   font-size: 12px;
   line-height: 1.285;
   color: #000000;
-  text-transform: uppercase;
+  text-transform: capitalize;
   font-weight: 600;
   letter-spacing: 0.22px;
   transition: color 0.3s ease;
@@ -3280,8 +3291,7 @@ textarea.custom-input {
 }
 
 .header--fixed .logo__text {
-  font-size: 14px;
-  margin-left: 13px;
+  margin-left: 2px;
 }
 
 @media (min-width: 992px) {
