--- a/css/main.css
+++ b/css/main.css
@@ -4083,7 +4083,7 @@ textarea.custom-input {
 
 .footer__phone:hover, .footer__phone:focus {
   outline: none;
-  color: #275026;
+  color: #ffffff;
 }
 
 .footer__phone:active {
